Bug 135953 - FILEOPEN PPTX: vertical text in SmartArt appears center-aligned instead of left-aligned
Summary: FILEOPEN PPTX: vertical text in SmartArt appears center-aligned instead of le...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.5.0
Keywords: filter:ooxml
Depends on:
Blocks: OOXML-SmartArt
  Show dependency treegraph
 
Reported: 2020-08-20 16:33 UTC by Gerald Pfeifer
Modified: 2022-07-26 10:32 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample slide (PPTX) (1.25 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2020-08-20 16:33 UTC, Gerald Pfeifer
Details
Screenshot comparing Office 365 and Impress (64.13 KB, image/png)
2020-08-20 16:37 UTC, Gerald Pfeifer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gerald Pfeifer 2020-08-20 16:33:46 UTC
Created attachment 164503 [details]
Sample slide (PPTX)

Compare the screenshots from Office 365 and Impress for the attached slide:
with Office 365 the vertical text renders at the left of each box, with Impress
in the center, where it overlaps with other, horizontal text.
Comment 1 Gerald Pfeifer 2020-08-20 16:37:49 UTC
Created attachment 164504 [details]
Screenshot comparing Office 365 and Impress
Comment 2 Aron Budea 2020-08-21 19:38:36 UTC
Confirmed using LO 7.1.0.0.alpha0+ (e69fafe1873e4afbe739f21f7a82a069cf7eb5b2), 4.0.0.3 / Windows.
Comment 3 Commit Notification 2022-07-25 21:08:41 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5df1bb4b1b222be00d25097660c4ee33542896ea

tdf#135953 move txXfrm to compensate TextRotateAngle

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Gerald Pfeifer 2022-07-26 10:32:28 UTC
Happy to confirm this resolves the original issue. Thanks, Regina!

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: 5df1bb4b1b222be00d25097660c4ee33542896ea
CPU threads: 8; OS: Linux 5.18; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US