tdf#135953 move txXfrm to compensate TextRotateAngle

The text rectangle specified by the txXfrm element rotates around its
center. We not directly use this rectangle but we use the text area
rectangle of the preset geometry and crop it by setting distances so,
that the result equals the txXfrm rectangle. But the text area
rectangle still rotates at its original center. So we shift the txXfrm
rectangle so, that it would be at it original place, when rotated with
TextRotateAngle. We then can use the shifted one to calculate the
needed distance values.

This patch contains the calculation of the text area rectangle for
type 'rightArrow' in addition. That fixes tdf#132302.

Change-Id: I59d9aecaaa7ce2ef4502651088ff9576b90873f7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/137396
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>